tests/fsharp/typecheck/sigs/neg51.bsl

neg51.fs(10,25,10,39): typecheck error FS1240: This type test or downcast will ignore the unit-of-measure 'kg'

neg51.fs(11,25,11,45): typecheck error FS1240: This type test or downcast will ignore the unit-of-measure 'kg'

neg51.fs(12,37,12,51): typecheck error FS1240: This type test or downcast will ignore the unit-of-measure ''u'

neg51.fs(15,25,15,40): typecheck error FS1240: This type test or downcast will ignore the unit-of-measure 'kg'

neg51.fs(16,25,16,46): typecheck error FS1240: This type test or downcast will ignore the unit-of-measure 'kg'

neg51.fs(17,37,17,52): typecheck error FS1240: This type test or downcast will ignore the unit-of-measure ''u'

neg51.fs(22,5,22,17): typecheck error FS1240: This type test or downcast will ignore the unit-of-measure 'kg'

neg51.fs(27,5,27,23): typecheck error FS1240: This type test or downcast will ignore the unit-of-measure 'kg'

neg51.fs(32,5,32,17): typecheck error FS1240: This type test or downcast will ignore the unit-of-measure ''u'

neg51.fs(43,5,43,17): typecheck error FS1240: This type test or downcast will ignore the unit-of-measure 'kg'

neg51.fs(48,5,48,23): typecheck error FS1240: This type test or downcast will ignore the unit-of-measure 'kg'

neg51.fs(53,5,53,17): typecheck error FS1240: This type test or downcast will ignore the unit-of-measure ''u'
